Added CLASSIC/SLIM arg
New slim behavior:

If arg 2 == slim, treat as slim skin
If arg 2 is not provided, run the automatic slim check
if the automatic slim check fails, default to the player's current state